--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "Reader",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "dependencies": {
     "iron_mq": "^0.2.4",
-    "node-webcrawler": "^0.4.8"
+    "node-webcrawler": "^0.4.8",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "b1thunt3r <ishan@jain.se>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/b1thunt3r/reader.git"
+  },
+  "bugs": {
+    "url": "https://github.com/b1thunt3r/reader/issues"
+  },
+  "homepage": "https://github.com/b1thunt3r/reader",
+  "readme": "README.md",
+  "description": "Test for Reader App..."
 }
