--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "main.js",
   "dependencies": {
     "iron_mq": "^0.2.4",
+    "node-readability": "^1.0.1",
     "node-webcrawler": "^0.4.8",
     "valid-url": "^1.0.9"
   },
